WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139504
REGRESSION (Async Text Input): Text input method state is not reset when reloading a page
https://bugs.webkit.org/show_bug.cgi?id=139504
Summary
REGRESSION (Async Text Input): Text input method state is not reset when relo...
Alexey Proskuryakov
Reported
2014-12-10 12:49:32 PST
* STEPS TO REPRODUCE
> SETUP
1. Launch System Preferences 2. Select "Keyboard" pref pane 3. Select "Input Sources" tab 4. Click "+" button to add an input source 5. Select Japanese and click "Add" button
> REPRODUCE
1. Launch Safari 2. Navigate to a webpage with fields (IE:
https://accounts.google.com/Signup
) 3. Set input method to Hiragana 4. Type in a field (IE: jaaka which produces じゃあか) and do not select a prediction 5. Refresh (⌘R) or click the refresh button 6. Click in any field and type a single character * EXPECTED RESULTS - Typed character should be entered in field * ACTUAL RESULTS - Typed character is appended to the end of the previously typed string We lost the code to call -discardMarkedText in async text input code path (and before that, some of it got lost in <
http://trac.webkit.org/changeset/150291
>). That was intentional, but of course we do need to call it in this case, and also on navigation.
rdar://problem/19034674
Attachments
proposed fix
(14.18 KB, patch)
2014-12-10 12:59 PST
,
Alexey Proskuryakov
enrica
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-12-10 12:59:56 PST
Created
attachment 243060
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2014-12-11 09:23:10 PST
Committed <
http://trac.webkit.org/r177152
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug